k8s/manifests-e8f8e7/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-e8f8e7
  namespace: journee
  labels:
    app: journee-e8f8e7
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-e8f8e7
  template:
    metadata:
      labels:
        app: journee-e8f8e7
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-e8f8e7
          image: gcr.io/my-docker-471807/journee:e8f8e7-6e6a25
          ports:
            - containerPort: 3000
